--- a/dev/scss/_module.navigation.scss
+++ b/dev/scss/_module.navigation.scss
@@ -1,51 +1,41 @@
 //  ## MODULE - NAVIGATION  ---------------------------------------------------------//
 
-.site-navigation {
+.navigation {
+    background-color: #000;
+    height: 34px;
     left: 0;
-    position: fixed;
+    padding: 5px;
+    position: absolute;
     right: 0;
     top: 0;
     z-index: 3;
 }
 
-.site-navigation ul {
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-.site-navigation li {
-    flex-grow: 1;
-    list-style: none;
-    overflow: hidden;
-}
-
-.site-navigation a {
+.navigation a {
     background-color: #000;
     color: #FFF;
     display: block;
     font-size: 10px;
     font-weight: 700;
-    height: 40px;
+    height: 34px;
     letter-spacing: 0.35em;
-    line-height: 40px;
+    line-height: 34px;
+    padding: 0 16px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
 }
 
-.site-navigation a:hover,
-.site-navigation a:focus,
-.site-navigation a:active {
+.navigation a:hover,
+.navigation a:focus,
+.navigation a:active {
     color: #FFF;
 }
 
-
-.js.csstransitions .site-navigation a {
-    color: #000;
-    transition: color 0.6s;
+.navigation a.primary {
+    float: left;
 }
 
-.js.csstransitions.loaded .site-navigation a {
-    color: #FFF;
+.navigation a.secondary {
+    float: right;
 }
